force-app/main/default/objects/Lead/fields/Cloudrop__Drip_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Drip_Campaign__c</fullName>
    <label>Drip Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Response Drip</fullName>
            </value>
            <value>
                <fullName>MM Lead Response Drip</fullName>
                <isActive>false</isActive>
                <label>MM Lead Response Drip</label>
            </value>
            <value>
                <fullName>MM Short Drip</fullName>
                <isActive>false</isActive>
                <label>MM Short Drip</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>