force-app/main/default/objects/Lead/fields/Cloudrop__Drip_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Drip_Campaign_Status__c</fullName>
    <label>Drip Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>