force-app/main/default/objects/Lead/fields/Cloudrop__Drip_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Drip_Start_Date_Time__c</fullName>
    <label>Drip Start Date/Time</label>
    <type>DateTime</type>
</CustomField>