force-app/main/default/objects/Lead/fields/Company_Foundation_Year__c.field-meta.xml
<CustomField>
    <fullName>Company_Foundation_Year__c</fullName>
    <label>Company Foundation Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>