force-app/main/default/objects/Lead/fields/Experience_Details__c.field-meta.xml
<CustomField>
    <fullName>Experience_Details__c</fullName>
    <label>Experience Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>