force-app/main/default/objects/Lead/fields/Experience_with_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Experience_with_Salesforce__c</fullName>
    <label>Experience with Salesforce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>