force-app/main/default/objects/Lead/fields/Lead_s_Answer__c.field-meta.xml
<CustomField>
    <fullName>Lead_s_Answer__c</fullName>
    <label>Lead&apos;s Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Auto-Reply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>