force-app/main/default/objects/Lead/fields/LinkedIn_User__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_User__c</fullName>
    <label>LinkedIn User</label>
    <type>Url</type>
</CustomField>