force-app/main/default/objects/Lead/fields/lleads__Department__c.field-meta.xml
<CustomField>
    <fullName>lleads__Department__c</fullName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>