force-app/main/default/objects/Lead/fields/lleads__HomePhone__c.field-meta.xml
<CustomField>
    <fullName>lleads__HomePhone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>