force-app/main/default/objects/Lead/fields/lleads__Save_Previous_Contact_Data__c.field-meta.xml
<CustomField>
    <fullName>lleads__Save_Previous_Contact_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Previous Contact Data</label>
    <type>Checkbox</type>
</CustomField>