force-app/main/default/objects/Lead/fields/mtdt__c.field-meta.xml
<CustomField>
    <fullName>mtdt__c</fullName>
    <label>mtdt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>