force-app/main/default/objects/Lead/fields/Negotiation_Handling_Other__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Handling_Other__c</fullName>
    <label>Negotiation Handling Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>