force-app/main/default/objects/Lead/fields/Person_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Person_Blocked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Blocked</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>