force-app/main/default/objects/Lead/fields/Prequalification_Status__c.field-meta.xml
<CustomField>
    <fullName>Prequalification_Status__c</fullName>
    <label>Prequalification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>