force-app/main/default/objects/Lead/fields/Request_for_Resources__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Resources__c</fullName>
    <label>Request for Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>