force-app/main/default/objects/Lead/fields/TVA_CO__Email_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Email_Validation_Status__c</fullName>
    <label>Email Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>