force-app/main/default/objects/Lead/fields/Type_of_Message__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Message__c</fullName>
    <label>Type of Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Message</fullName>
            </value>
            <value>
                <fullName>Long Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>