force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Have partners</fullName>
            </value>
            <value>
                <fullName>Have internal resources</fullName>
            </value>
            <value>
                <fullName>Just have had onboarding with a new partner</fullName>
            </value>
            <value>
                <fullName>Don&apos;t have budget</fullName>
            </value>
            <value>
                <fullName>Don&apos;t use SF extensively</fullName>
            </value>
            <value>
                <fullName>No need</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>