force-app/main/default/objects/Lead/fields/Warm_Lead__c.field-meta.xml
<CustomField>
    <fullName>Warm_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warm Lead</label>
    <type>Checkbox</type>
</CustomField>