force-app/main/default/objects/Lead/fields/zisf__Zoom_Clean_Status__c.field-meta.xml
<CustomField>
    <fullName>zisf__Zoom_Clean_Status__c</fullName>
    <label>ZoomInfo Clean Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
                <color>#009900</color>
                <label>Clean</label>
            </value>
            <value>
                <fullName>In Sync</fullName>
                <color>#78C953</color>
                <label>In Sync</label>
            </value>
            <value>
                <fullName>Not Found</fullName>
                <color>#EFAE73</color>
                <label>Not Found</label>
            </value>
            <value>
                <fullName>Not Compared</fullName>
                <color>#AFCADF</color>
                <default>true</default>
                <label>Not Compared</label>
            </value>
            <value>
                <fullName>Different</fullName>
                <color>#F3D904</color>
                <label>Different</label>
            </value>
            <value>
                <fullName>Company Clean Only</fullName>
                <color>#33CC00</color>
                <label>Company Clean Only</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <color>#CC0000</color>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>