force-app/main/default/objects/Lead/recordTypes/Web_generated_Lead.recordType-meta.xml
<RecordType>
    <fullName>Web_generated_Lead</fullName>
    <active>true</active>
    <businessProcess>Web-generated Lead Process</businessProcess>
    <description>Lead, generated by Web-to-Lead</description>
    <label>Web-generated Lead</label>
</RecordType>